src/objects/VAT_Validation_Length__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Indicates the VAT Registrations Number&apos;s character length for each country ISO. Create new fields if new countries will be added.</description>
    <fields>
        <fullName>AT__c</fullName>
        <description>Austria</description>
        <inlineHelpText>Austria</inlineHelpText>
        <label>AT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BE__c</fullName>
        <description>Belgium</description>
        <inlineHelpText>Belgium</inlineHelpText>
        <label>BE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BG__c</fullName>
        <description>Bulgaria</description>
        <inlineHelpText>Bulgaria</inlineHelpText>
        <label>BG</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY__c</fullName>
        <description>Cyprus</description>
        <inlineHelpText>Cyprus</inlineHelpText>
        <label>CY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZ__c</fullName>
        <description>Czech Republic</description>
        <inlineHelpText>Czech Republic</inlineHelpText>
        <label>CZ</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DE__c</fullName>
        <description>Germany</description>
        <inlineHelpText>Germany</inlineHelpText>
        <label>DE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DK__c</fullName>
        <description>Denmark</description>
        <inlineHelpText>Denmark</inlineHelpText>
        <label>DK</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE__c</fullName>
        <description>Estonia</description>
        <inlineHelpText>Estonia</inlineHelpText>
        <label>EE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EL__c</fullName>
        <description>Greece</description>
        <inlineHelpText>Greece</inlineHelpText>
        <label>EL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES__c</fullName>
        <description>Spain</description>
        <inlineHelpText>Spain</inlineHelpText>
        <label>ES</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FI__c</fullName>
        <description>Finland</description>
        <inlineHelpText>Finland</inlineHelpText>
        <label>FI</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FR__c</fullName>
        <description>France</description>
        <inlineHelpText>Frace</inlineHelpText>
        <label>FR</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GB__c</fullName>
        <description>United Kingdom</description>
        <inlineHelpText>United Kingdom</inlineHelpText>
        <label>GB</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HR__c</fullName>
        <description>Croatia</description>
        <inlineHelpText>Croatia</inlineHelpText>
        <label>HR</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HU__c</fullName>
        <description>Hungary</description>
        <inlineHelpText>Hungary</inlineHelpText>
        <label>HU</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IE__c</fullName>
        <description>Ireland</description>
        <inlineHelpText>Ireland</inlineHelpText>
        <label>IE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT__c</fullName>
        <description>Italy</description>
        <inlineHelpText>Italy</inlineHelpText>
        <label>IT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LT__c</fullName>
        <description>Lithuania</description>
        <inlineHelpText>Lithuania</inlineHelpText>
        <label>LT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LU__c</fullName>
        <description>Luxembourg</description>
        <inlineHelpText>Luxembourg</inlineHelpText>
        <label>LU</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LV__c</fullName>
        <description>Latvia</description>
        <inlineHelpText>Latvia</inlineHelpText>
        <label>LV</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC__c</fullName>
        <description>Monaco</description>
        <inlineHelpText>Monaco</inlineHelpText>
        <label>MC</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT__c</fullName>
        <description>Malta</description>
        <inlineHelpText>Malta</inlineHelpText>
        <label>MT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NL__c</fullName>
        <description>Netherlands</description>
        <inlineHelpText>Netherlands</inlineHelpText>
        <label>NL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO__c</fullName>
        <description>Norway</description>
        <inlineHelpText>Norway</inlineHelpText>
        <label>NO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PL__c</fullName>
        <description>Poland</description>
        <inlineHelpText>Poland</inlineHelpText>
        <label>PL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT__c</fullName>
        <description>Portugal</description>
        <inlineHelpText>Portugal</inlineHelpText>
        <label>PT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO__c</fullName>
        <description>Romania</description>
        <inlineHelpText>Romania</inlineHelpText>
        <label>RO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SE__c</fullName>
        <description>Sweden</description>
        <inlineHelpText>Sweden</inlineHelpText>
        <label>SE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SI__c</fullName>
        <description>Slovenia</description>
        <inlineHelpText>Slovenia</inlineHelpText>
        <label>SI</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SK__c</fullName>
        <description>Slovakia</description>
        <inlineHelpText>Slovakia</inlineHelpText>
        <label>SK</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>VAT Validation Length</label>
</CustomObject>